--- a/.env.example
+++ b/.env.example
@@ -29,14 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=reviewvivuhanoi@gmail.com
+MAIL_PASSWORD=reviewhanoi2022
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=reviewvivuhanoi@gmail.com
+MAIL_FROM_NAME=ReviewHaNoi
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
